# -TradingAgents

./: .env.db.example  .env.example  .gitignore  QUICKREF.md  README.md  docker-compose.yml  pyproject.toml  schema_v1.sql
docker/: Dockerfile.pg18  init.sql
docs/: OUTPUT-SCHEMAS.md  RUNBOOK.md  V2-DESIGN.md  V2-VALIDATION.md  V3-VALIDATION.md  V3.2-VALIDATION.md  v1-summary.md
infra/db/migrations/: 002_v21_observability_views.sql
results/: 300750_SZ_2026-03-29.json  600036_SH_2026-03-29.json
scripts/: run_minimax.py
tests/: test_candidate_bucket.py  test_prediction_scope.py  test_v31_ranking.py
tradingagents/: default_config.py
tradingagents/agents/utils/: agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  news_data_tools.py  technical_indicators_tools.py
tradingagents/dataflows/: akshare_data.py  alpha_vantage_indicator.py  interface.py  tushare_data.py
tradingagents/graph/: propagation.py
tradingagents/llm_clients/: anthropic_client.py  base_client.py
tradingagents_runner/: __init__.py  alerter.py  backfill_market_bars.py  batch.py  batch_summary.py  candidate_bucket.py  data_quality.py  db.py  decision_policy.py  portfolio_context.py  portfolio_snapshot.py  pyproject.toml  ranking.py  repositories.py  run.py  run_status.py  runner.py  scheduler.py  serialization.py
tradingagents_runner/tests/: test_runner_parse.py
