[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-runner"
version = "0.1.0"
description = "Lightweight wrapper for TradingAgents framework"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingagents_runner*"]

[tool.setuptools.package-dir]
"" = "."
